@@ -1,3 +1,15 @@
+2010-09-15  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/term_api.h src/term.c (strlen_tex):  Add a special-case routine to
+	estimate the true number of output characters in a LaTeX string
+	containing markup. This is not a real LaTeX parser, but even a poor
+	estimate is better than just calling strlen().
+	Bug #1603348 and others
+
+	* term/latex.trm term/lua.trm term/pslatex.trm: Set flag TERM_IS_LATEX
+	so that strings passed to these terminals are sent to strlen_tex() 
+	rather than the normal enhanced text string length estimation.
+
 2010-09-10  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (boundary): When calculating the horizontal space
